--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,7 +49,16 @@ section {
     margin: 40px 0 0 0;
 }
 
-nav a,
+nav a {
+    color: $black;
+    text-decoration: none;
+}
+
+img {
+    max-width: 780px;
+}
+
+nav a.selected,
 p a {
     color: $black;
     text-decoration: none;
